manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: part-1-backend
  name: part-1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: part-1-backend
  strategy: {}
  template:
    metadata:
      labels:
        app: part-1-backend
    spec:
      containers:
      - image: part-1-backend:latest
        ports:
          - containerPort: 8000
        name: backend
        resources: {}
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 5  # Time to wait before first check
          periodSeconds: 10       # How often to check
          timeoutSeconds: 2       # Timeout for response
          failureThreshold: 3     # Number of failures before restarting
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 5  # Time to wait before first check
          periodSeconds: 5       # How often to check
          timeoutSeconds: 2       # Timeout for response
          failureThreshold: 3     # Number of failures before restarting
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: part-1-frontend
  name: part-1-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: part-1-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: part-1-frontend
    spec:
      containers:
      - image: part-1-frontend:latest
        ports:
          - containerPort: 8050
        name: frontend
        resources: {}
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8050
          initialDelaySeconds: 5  # Time to wait before first check
          periodSeconds: 10       # How often to check
          timeoutSeconds: 2       # Timeout for response
          failureThreshold: 3     # Number of failures before restarting
        readinessProbe:
          httpGet:
            path: /ready
            port: 8050
          initialDelaySeconds: 5  # Time to wait before first check
          periodSeconds: 5       # How often to check
          timeoutSeconds: 2       # Timeout for response
          failureThreshold: 3     # Number of failures before restarting
status: {}
