manifests/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: part-1
spec:
  ingressClassName: nginx
  rules:
  - host: apps.part-1.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: part-1-backend
            port:
              number: 8000
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: part-1-frontend
            port:
              number: 8050
